# ml-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README copy.md  README.md  build.sh  intel.sh  patch.sh  run_cli.sh  run_server.sh  sysinfo.txt
benchmark/: README.md  benchmark_compare.py  run.sh
config/: engine-config.json  license.json  public_key.pem
include/: ename.c.inc  log.h
include/api/: api_server.hpp
include/api/handler/: handler_base.hpp
include/engine/: engine.hpp  engine_state.hpp
include/llm/: generate.json  llm_engine.hpp
include/ml/: dataset.hpp  model_base.hpp  registry.hpp  trainer.hpp
include/ml/transforms/: ensure_channel.hpp
src/: main.cpp
src/api/: api_server.cpp
src/api/handler/: handler_base.cpp
src/engine/: engine.cpp
src/llm/: llm_engine.cpp
src/ml/: dataset.cpp  registry.cpp  trainer.cpp
src/ml/models/cnn_mnist/: model.cpp  model.hpp
